# StockDataManager

./: .gitignore  README.md  install-dev.ps1  install.bat  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_download_plan.json  verify_environment.py
.cursor/: scratchpad.md
config/: README.md  config.json
data/: README.md  database_schema_summary.md  integrity_report.json  stock_basic_fallback.csv
docs/: api_manager_usage.md  data_storage_usage.md  deployment_guide.md  incremental_update_guide.md  tushare_api_permission_analysis.md  tushare_pro_api_analysis.md  user_guide.md
logs/: README.md
src/: __init__.py  command_line_interface.py  config_manager.py  daily_data_manager.py  data_integrity_manager.py  data_storage_manager.py  database_init.sql  database_manager.py  database_schema_validator.py  download_status_manager.py  error_handler_retry_manager.py  incremental_update_manager.py  logging_manager.py  monitoring_report_manager.py  optimized_tushare_api_manager.py  schedule_manager.py  smart_download_manager.py  stock_basic_manager.py  tushare_api_manager.py
tests/: README.md  __init__.py
